--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,6 +1,56 @@
-{{message}}
+
 <form ng-submit="submit()" ng-controller="loginCtrl">
-    Username: <input ng-model="formData.username" type="text" name="username"><br>
-    Password: <input ng-model="formData.password" type="password" name="password"><br/>
-    <input type="submit" value="Login">
+    <div class="group">
+        <input type="text" ng-model="formData.username"><span class="highlight"></span><span class="bar"></span>
+        <label>Username</label>
+    </div>
+    <div class="group">
+        <input type="email" ng-model="formData.password"><span class="highlight"></span><span class="bar"></span>
+        <label>Password</label>
+    </div>
+    <button type="submit" class="button buttonBlue">Login
+        <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
+    </button>
 </form>
+
+<!--hi, i'm ugly, alex will rewrite me later   creation date 26.11.2015-->
+<!--TODO: rewrite with angular-->
+
+<script type="text/javascript">
+
+    $(window, document, undefined).ready(function() {
+
+        $('input').blur(function() {
+            var $this = $(this);
+            if ($this.val())
+                $this.addClass('used');
+            else
+                $this.removeClass('used');
+        });
+
+        var $ripples = $('.ripples');
+
+        $ripples.on('click.Ripples', function(e) {
+
+            var $this = $(this);
+            var $offset = $this.parent().offset();
+            var $circle = $this.find('.ripplesCircle');
+
+            var x = e.pageX - $offset.left;
+            var y = e.pageY - $offset.top;
+
+            $circle.css({
+                top: y + 'px',
+                left: x + 'px'
+            });
+
+            $this.addClass('is-active');
+
+        });
+
+        $ripples.on('animationend webkitAnimationEnd mozAnimationEnd oanimationend MSAnimationEnd', function(e) {
+            $(this).removeClass('is-active');
+        });
+
+    });
+</script>
