--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,4 +1,4 @@
-
+<link href="/public/css/login.css" rel="stylesheet">
 <form ng-submit="submit()" ng-controller="loginCtrl">
     <div class="group">
         <input type="text" ng-model="formData.username"><span class="highlight"></span><span class="bar"></span>
@@ -11,11 +11,10 @@
     <button type="submit" class="button buttonBlue">Login
         <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
     </button>
-</form>
+
 
 <!--hi, i'm ugly, alex will rewrite me later   creation date 26.11.2015-->
 <!--TODO: rewrite with angular-->
-
 <script type="text/javascript">
 
     $(window, document, undefined).ready(function() {
@@ -54,3 +53,4 @@
 
     });
 </script>
+</form>
