--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,122 +1,34 @@
 /*not a less actually but left it here*/
-* {
-  box-sizing: border-box;
-}
 body {
   font-family: Helvetica;
   background: #eee;
   -webkit-font-smoothing: antialiased;
 }
-h1,
-h3 {
-  font-weight: 300;
-}
-h1 {
-  color: #636363;
-}
-h3 {
-  color: #4a89dc;
-}
 form {
   width: 380px;
-  margin: 4em auto;
+  margin: auto auto;
   padding: 3em 2em 2em 2em;
   background: #fafafa;
   border: 1px solid #ebebeb;
   box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px 0px, rgba(0, 0, 0, 0.09804) 0px 1px 2px 0px;
 }
-.group {
-  position: relative;
-  margin-bottom: 45px;
+.login {
+  /* Button modifiers */
 }
-input {
-  font-size: 18px;
-  padding: 10px 10px 10px 5px;
-  -webkit-appearance: none;
-  display: block;
-  background: #fafafa;
+.login .input {
+  margin-bottom: 20px;
+}
+.login h1,
+.login h3 {
+  font-weight: 300;
+}
+.login h1 {
   color: #636363;
-  width: 100%;
-  border: none;
-  border-radius: 0;
-  border-bottom: 1px solid #757575;
 }
-input:focus {
-  outline: none;
-}
-/* Label */
-label {
-  color: #999;
-  font-size: 18px;
-  font-weight: normal;
-  position: absolute;
-  pointer-events: none;
-  left: 5px;
-  top: 10px;
-  transition: all 0.2s ease;
-}
-/* active */
-input:focus ~ label,
-input.used ~ label {
-  top: -20px;
-  transform: scale(0.75);
-  left: -2px;
-  /* font-size: 14px; */
+.login h3 {
   color: #4a89dc;
 }
-/* Underline */
-.bar {
-  position: relative;
-  display: block;
-  width: 100%;
-}
-.bar:before,
-.bar:after {
-  content: '';
-  height: 2px;
-  width: 0;
-  bottom: 1px;
-  position: absolute;
-  background: #4a89dc;
-  transition: all 0.2s ease;
-}
-.bar:before {
-  left: 50%;
-}
-.bar:after {
-  right: 50%;
-}
-/* active */
-input:focus ~ .bar:before,
-input:focus ~ .bar:after {
-  width: 50%;
-}
-/* Highlight */
-.highlight {
-  position: absolute;
-  height: 60%;
-  width: 100px;
-  top: 25%;
-  left: 0;
-  pointer-events: none;
-  opacity: 0.5;
-}
-/* active */
-input:focus ~ .highlight {
-  animation: inputHighlighter 0.3s ease;
-}
-/* Animations */
-@keyframes inputHighlighter {
-  from {
-    background: #4a89dc;
-  }
-  to {
-    width: 0;
-    background: transparent;
-  }
-}
-/* Button */
-.button {
+.login .button {
   position: relative;
   display: inline-block;
   padding: 12px 24px;
@@ -135,53 +47,13 @@ input:focus ~ .highlight {
   cursor: pointer;
   transition: all 0.15s ease;
 }
-.button:focus {
+.login .button:focus {
   outline: 0;
 }
-/* Button modifiers */
-.buttonBlue {
+.login .buttonBlue {
   background: #4a89dc;
   text-shadow: 1px 1px 0 rgba(39, 110, 204, 0.5);
 }
-.buttonBlue:hover {
+.login .buttonBlue:hover {
   background: #357bd8;
-}
-/* Ripples container */
-.ripples {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background: transparent;
-}
-/* Ripples circle */
-.ripplesCircle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  width: 0;
-  height: 0;
-  border-radius: 50%;
-  background: rgba(255, 255, 255, 0.25);
-}
-.ripples.is-active .ripplesCircle {
-  animation: ripples 0.4s ease-in;
-}
-/* Ripples animation */
-@keyframes ripples {
-  0% {
-    opacity: 0;
-  }
-  25% {
-    opacity: 1;
-  }
-  100% {
-    width: 200%;
-    padding-bottom: 200%;
-    opacity: 0;
-  }
 }
