--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,56 +1,24 @@
-<link href="/public/css/login.css" rel="stylesheet">
-<form ng-submit="submit()" ng-controller="loginCtrl">
-    <div class="group">
-        <input type="text" ng-model="formData.username"><span class="highlight"></span><span class="bar"></span>
+<link rel="stylesheet" href="/public/css/login.css">
+<form ng-submit="submit()" class="login" ng-controller="loginCtrl">
+    <md-input-container class="input">
         <label>Username</label>
-    </div>
-    <div class="group">
-        <input type="email" ng-model="formData.password"><span class="highlight"></span><span class="bar"></span>
+        <input type="text" ng-model="formData.username" required md-maxlength="100">
+        <div ng-messages="userForm.lastName.$error" ng-show="userForm.lastName.$dirty">
+            <div ng-message="required">This is required!</div>
+            <div ng-message="md-maxlength">That's too long!</div>
+            <div ng-message="minlength">That's too short!</div>
+        </div>
+    </md-input-container>
+    <md-input-container class="input">
         <label>Password</label>
-    </div>
+        <input type="text" ng-model="formData.password" required md-maxlength="100">
+        <div ng-messages="userForm.lastName.$error" ng-show="userForm.lastName.$dirty">
+            <div ng-message="required">This is required!</div>
+            <div ng-message="md-maxlength">That's too long!</div>
+            <div ng-message="minlength">That's too short!</div>
+        </div>
+    </md-input-container>
     <button type="submit" class="button buttonBlue">Login
         <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
     </button>
-
-
-<!--hi, i'm ugly, alex will rewrite me later   creation date 26.11.2015-->
-<!--TODO: rewrite with angular-->
-<script type="text/javascript">
-
-    $(window, document, undefined).ready(function() {
-
-        $('input').blur(function() {
-            var $this = $(this);
-            if ($this.val())
-                $this.addClass('used');
-            else
-                $this.removeClass('used');
-        });
-
-        var $ripples = $('.ripples');
-
-        $ripples.on('click.Ripples', function(e) {
-
-            var $this = $(this);
-            var $offset = $this.parent().offset();
-            var $circle = $this.find('.ripplesCircle');
-
-            var x = e.pageX - $offset.left;
-            var y = e.pageY - $offset.top;
-
-            $circle.css({
-                top: y + 'px',
-                left: x + 'px'
-            });
-
-            $this.addClass('is-active');
-
-        });
-
-        $ripples.on('animationend webkitAnimationEnd mozAnimationEnd oanimationend MSAnimationEnd', function(e) {
-            $(this).removeClass('is-active');
-        });
-
-    });
-</script>
 </form>
