--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,19 +1,18 @@
-/*not a less actually but left it here*/
 body {
-  font-family: Helvetica;
   background: #eee;
   -webkit-font-smoothing: antialiased;
 }
-form {
+.login {
+  padding-top: 3em;
+  /* Button modifiers */
+}
+.login form {
   width: 380px;
-  margin: auto auto;
+  margin: auto;
   padding: 3em 2em 2em 2em;
   background: #fafafa;
   border: 1px solid #ebebeb;
   box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px 0px, rgba(0, 0, 0, 0.09804) 0px 1px 2px 0px;
-}
-.login {
-  /* Button modifiers */
 }
 .login .input {
   margin-bottom: 20px;
