--- a/public/views/createToDoListTemplates.html
+++ b/public/views/createToDoListTemplates.html
@@ -1,13 +1,14 @@
 <div ng-controller="createToDoListTemplatesCtrl as ctrl" layout="column" ng-cloak
      class="md-inline-form">
+
     <div layout="row" layout-wrap>
         <div flex>
         </div>
-        <div flex-lg="60" flex-md="80" flex-sm="100" flex-gt-lg="60">
+        <div flex-lg="80" flex-md="80" flex-sm="80" flex-gt-lg="80">
             <md-content layout-padding layout="column" layout-sm="column">
                 <md-input-container>
                     <label>Sensor</label>
-                    <md-select ng-model="ctrl.toDoListTemplate.sensor">
+                    <md-select ng-model="toDoListTemplate.sensor">
                         <md-option ng-repeat="sensor in ctrl.sensors" value="{{sensor}}">
                             {{sensor}}
                         </md-option>
@@ -15,7 +16,7 @@
                 </md-input-container>
                 <md-input-container>
                     <label>Alarmtype</label>
-                    <md-select ng-model="ctrl.toDoListTemplate.alarmtype">
+                    <md-select ng-model="toDoListTemplate.alarmtype">
                         <md-option ng-repeat="alarmtype in ctrl.alarmtypes" value="{{alarmtype}}">
                             {{alarmtype}}
                         </md-option>
@@ -23,11 +24,15 @@
                 </md-input-container>
                 <md-input-container>
                     <label>User</label>
-                    <input type="text">
+                    <md-select ng-model="toDoListTemplate.user">
+                        <md-option ng-repeat="user in ctrl.users" value="{{user}}">
+                            {{user}}
+                        </md-option>
+                    </md-select>
                 </md-input-container>
             </md-content>
             <h4>ToDos</h4>
-            <table class="ui celled table">
+            <table class="ui celled table" ng-show="toDoListTemplate.toDoTemplates.length">
                 <thead>
                 <tr>
                     <th>Name</th>
@@ -35,85 +40,57 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>Max Mustermann</td>
-                    <td>Call Fire Brigade</td>
+                <tr ng-repeat="toDoTemplate in toDoListTemplate.toDoTemplates track by $index">
+                    <td>{{toDoTemplate.name}}</td>
+                    <td>{{toDoTemplate.description}}</td>
                 </tr>
                 </tbody>
             </table>
+            <p ng-show="!toDoListTemplate.toDoTemplates.length">
+                No ToDos
+            </p>
             <md-button class="md-raised" ng-click="showAdvanced($event)">Add ToDo</md-button>
-            <md-button class="md-raised md-primary">Save</md-button>
+            <md-button class="md-raised md-primary" ng-click="submit()">Save</md-button>
+
         </div>
+
         <div flex>
         </div>
     </div>
+</div>
 
-    <script type="text/ng-template" id="dialog.tmpl.html">
-        <md-dialog
-                aria-label="Mango (Fruit)" ng-cloak>
-            <form>
-                <md-toolbar>
-                    <div class="md-toolbar-tools">
-                        <h2>Mango (Fruit)</h2>
-                        <span flex></span>
-                        <md-button class="md-icon-button" ng-click="cancel()">
-                            <md-icon md-svg-src="/public/img/icons/ic_close_24px.svg"
-                                     aria-label="Close dialog"></md-icon>
-                        </md-button>
-                    </div>
-                </md-toolbar>
-
-                <md-dialog-content>
-                    <div class="md-dialog-content">
-                        <h2>Using .md-dialog-content class that sets the padding as the spec</h2>
-
-                        <p>
-                            The mango is a juicy stone fruit belonging to the genus Mangifera, consisting of numerous
-                            tropical fruiting trees, cultivated mostly for edible fruit. The majority of these species
-                            are
-                            found in nature as wild mangoes. They all belong to the flowering plant family
-                            Anacardiaceae.
-                            The mango is native to South and Southeast Asia, from where it has been distributed
-                            worldwide to
-                            become one of the most cultivated fruits in the tropics.
-                        </p>
-
-                        <img style="margin: auto; max-width: 100%;" alt="Lush mango tree" src="img/mangues.jpg">
-
-                        <p>
-                            The highest concentration of Mangifera genus is in the western part of Malesia (Sumatra,
-                            Java
-                            and Borneo) and in Burma and India. While other Mangifera species (e.g. horse mango, M.
-                            foetida)
-                            are also grown on a more localized basis, Mangifera indica&mdash;the "common mango" or
-                            "Indian
-                            mango"&mdash;is the only mango tree commonly cultivated in many tropical and subtropical
-                            regions.
-                        </p>
-
-                        <p>
-                            It originated in Indian subcontinent (present day India and Pakistan) and Burma. It is the
-                            national fruit of India, Pakistan, and the Philippines, and the national tree of Bangladesh.
-                            In
-                            several cultures, its fruit and leaves are ritually used as floral decorations at weddings,
-                            public celebrations, and religious ceremonies.
-                        </p>
-                    </div>
-                </md-dialog-content>
-
-                <md-dialog-actions layout="row">
-                    <md-button href="http://en.wikipedia.org/wiki/Mango" target="_blank" md-autofocus>
-                        More on Wikipedia
-                    </md-button>
+<script type="text/ng-template" id="dialog.tmpl.html">
+    <md-dialog aria-label="Mango (Fruit)" ng-cloak flex="50">
+        <form>
+            <md-toolbar>
+                <div class="md-toolbar-tools">
+                    <h2>Add ToDo</h2>
                     <span flex></span>
-                    <md-button ng-click="answer('not useful')">
-                        Not Useful
+                    <md-button class="md-icon-button" ng-click="cancel()">
+                        <md-icon md-svg-src="/public/img/icons/ic_close_24px.svg"
+                                 aria-label="Close dialog"></md-icon>
                     </md-button>
-                    <md-button ng-click="answer('useful')" style="margin-right:20px;">
-                        Useful
+                </div>
+            </md-toolbar>
+
+            <md-dialog-content>
+                <div class="md-dialog-content">
+                    <md-input-container>
+                        <label>Name</label>
+                        <input type="text" ng-model="newToDo.name">
+                    </md-input-container>
+                    <md-input-container class="md-block">
+                        <label>Description</label>
+                        <textarea ng-model="newToDo.description" columns="1" rows="5"></textarea>
+                    </md-input-container>
+                </div>
+                <md-dialog-actions layout="row">
+                    <span flex></span>
+                    <md-button class="md-raised md-primary" ng-click="addToDo(newToDo)" style="margin-right:20px;">
+                        Add
                     </md-button>
                 </md-dialog-actions>
-            </form>
-        </md-dialog>
-    </script>
-</div>
+            </md-dialog-content>
+        </form>
+    </md-dialog>
+</script>
