--- a/public/views/viewUser.html
+++ b/public/views/viewUser.html
@@ -4,15 +4,11 @@
             <img src="http://thesocialmediamonthly.com/wp-content/uploads/2015/08/photo.png">
         </div>
         <div class="content">
-            <a class="header" ng-model="user.firestname + ' ' + user.lastname"></a>
-            <div class="meta">
-                <span>Email</span>
-            </div>
-            <div class="description" mg-model="user.email">
-            </div>
-            <div class="extra">
-                Additional Details
-            </div>
+            <a class="header" ng-model="user.firstname + ' ' + user.lastname"></a>
+            <md-input-container class="md-block">
+                <label>Email</label>
+                <textarea ng-model="user.email" disabled></textarea>
+            </md-input-container>
         </div>
     </div>
 </div>
