--- a/public/templates/nav.html
+++ b/public/templates/nav.html
@@ -3,8 +3,8 @@
     <md-toolbar id="navbar">
         <div class="md-toolbar-tools" ng-controller="navCtrl as navCtrl">
             <span flex></span>
-            <md-button aria-label="Sensor" ng-click="navCtrl.showSensorList()">
-                Sensor
+            <md-button aria-label="Search" ng-click="navCtrl.showSearch()">
+                Search
             </md-button>
             <md-menu md-offset="0 45">
                 <md-button aria-label="ToDoList" ng-click="navCtrl.openMenu($mdOpenMenu, $event)">
