--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,3 +1,4 @@
+<link href="/public/css/login.css" rel="stylesheet" >
 <div class="login">
     <link rel="stylesheet" href="/public/css/login.css">
     <form ng-submit="submit()" ng-controller="loginCtrl">
