--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,4 +1,17 @@
 <div ng-controller="searchCtrl">
+
+    <form name="searchForm">
+        <div layout="">
+            <md-input-container flex="">
+                <label>Tags</label>
+                <input ng-model="tags">
+            </md-input-container>
+        </div>
+        <div layout="row" layout-align="end">
+            <md-button class="md-raised md-primary" ng-click="search()">Search</md-button>
+        </div>
+    </form>
+
     <md-list ng-cloak="">
         <md-list-item ng-repeat="toDoList in result">
             [{{$index + 1}}]:
@@ -16,4 +29,5 @@
             </ul>
         </md-list-item>
     </md-list>
+
 </div>
