--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,11 +1,16 @@
-<div ng-controller="searchCtrl">
+<link href="/public/css/search.css" rel="stylesheet">
+<div ng-controller="searchCtrl" class="search">
 
     <form name="searchForm">
         <div layout="">
-            <md-input-container flex="">
-                <label>Tags</label>
-                <input ng-model="tags">
-            </md-input-container>
+                <h2>Tags</h2>
+                <md-chips
+                        ng-model="tags"
+                        placeholder="Enter a tag"
+                        readonly="false"
+                        delete-button-label="Remove Tag"
+                        delete-hint="Press delete to remove tag"
+                        secondary-placeholder="Enter a tag"></md-chips>
         </div>
         <div layout="row" layout-align="end">
             <md-button class="md-raised md-primary" ng-click="search()">Search</md-button>
