--- a/public/views/createUser.html
+++ b/public/views/createUser.html
@@ -19,6 +19,11 @@
                 <input ng-model="user.email" type="email">
             </md-input-container>
 
+            <md-input-container>
+                <label>Password</label>
+                <input ng-model="user.password" type="text">
+            </md-input-container>
+
             <md-input-container class="md-block">
                 <label>Address</label>
                 <input ng-model="user.address">
