Bugfixes, Create toDoLists

--- a/public/templates/nav.html
+++ b/public/templates/nav.html
@@ -17,7 +17,7 @@
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="navCtrl.createToDoListTemplate()">
+                        <md-button ng-click="navCtrl.createToDoList()">
                             create New
                         </md-button>
                     </md-menu-item>
