--- a/public/views/search.html
+++ b/public/views/search.html
@@ -23,7 +23,7 @@
             Tags
             <ul>
                 <li ng-repeat="tag in toDoList.tags">
-                    {{ tag.value }}
+                    {{ tag }}
                 </li>
             </ul>
             ToDos:
