--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,38 +1,34 @@
 <link href="/public/css/search.css" rel="stylesheet">
-<div ng-controller="searchCtrl" class="search">
-
+<div ng-controller="searchCtrl" class="search" layout="column" ng-cloak="">
+<md-content class="md-padding" layout="column">
     <form name="searchForm">
-        <div layout="">
-                <h2>Tags</h2>
-                <md-chips
-                        ng-model="tags"
-                        placeholder="Enter a tag"
-                        readonly="false"
-                        delete-button-label="Remove Tag"
-                        delete-hint="Press delete to remove tag"
-                        secondary-placeholder="Enter a tag"></md-chips>
-        </div>
+        <md-chips
+                ng-model="tags"
+                placeholder="Press enter to search"
+                readonly="false"
+                delete-button-label="Remove Tag"
+                delete-hint="Press delete to remove tag"
+                secondary-placeholder="Enter a tag and press enter"></md-chips>
         <div layout="row" layout-align="end">
             <md-button class="md-raised md-primary" ng-click="search()">Search</md-button>
         </div>
     </form>
 
     <md-list ng-cloak="">
-        <md-list-item ng-repeat="toDoList in result">
-            [{{$index + 1}}]:
-            Tags
-            <ul>
-                <li ng-repeat="tag in toDoList.tags">
-                    {{ tag }}
-                </li>
-            </ul>
-            ToDos:
-            <ul>
-                <li ng-repeat="todo in toDoList.todos">
-                    {{ todo.name }}
-                </li>
-            </ul>
+        <md-subheader class="md-no-sticky">Search results</md-subheader>
+        <md-list-item class="md-3-line" ng-repeat="toDoList in result">
+            <div class="md-list-item-text" layout="column">
+                <h2>{{ toDoList.name }}</h2>
+                <div layout=""><md-chips ng-model="toDoList.tags" readonly="true"></md-chips></div>
+                <md-list-item class="md-2-line" ng-repeat="todo in toDoList.todos">
+                    <div class="md-list-item-text">
+                        <h3>{{ todo.name }}</h3>
+                        <p>{{ todo.description }}</p>
+                    </div>
+                </md-list-item>
+            </div>
         </md-list-item>
     </md-list>
 
+</md-content>
 </div>
