--- a/public/views/createToDoList.html
+++ b/public/views/createToDoList.html
@@ -79,7 +79,7 @@
 </div>
 
 <script type="text/ng-template" id="dialog.tmpl.html">
-    <md-dialog aria-label="Mango (Fruit)" ng-cloak flex="50">
+    <md-dialog aria-label="Add ToDo dialog" ng-cloak flex="50">
         <form>
             <md-toolbar>
                 <div class="md-toolbar-tools">
